welcome.lessons.welcome.array.array667.Array667.scala.error
array667:1: error: not found: value compteur67
def array667(nums:Array[Int]): Int = {var compteur66 = 0; compteur67 = 0;
                                                          ^array667:2: error: not found: value compteur67
  for (i<-0 to nums.length-2) {if (nums(i) == 6 && nums(i+1) ==6) {compteur66 = compteur66+1}; if (nums(i) == 6 && nums(i+1) ==7) {compteur67 = compteur67 +1}}; return compteur66 compteur67}
                                                                                                                                   ^array667:2: error: value compteur67 is not a member of Int
  for (i<-0 to nums.length-2) {if (nums(i) == 6 && nums(i+1) ==6) {compteur66 = compteur66+1}; if (nums(i) == 6 && nums(i+1) ==7) {compteur67 = compteur67 +1}}; return compteur66 compteur67}
                                                                                                                                                                                   ^